# peaknet

./: .gitignore  GROUP_2_IMPLEMENTATION_SUMMARY.md  README.md  manifest.in  pyproject.toml  setup.py
examples/: base_config.yaml  create_dataset.from_cxi.py  create_dataset.from_cxi.yaml  cxi_to_npy.py  implement.psana_loader.torchrun.py  implement.sfx_inference.py  label_studio.add_coco.py  label_studio.coco_to_project.py  peakdiff.visualizer.py  peaknet.cxic00121_0015.yaml  scr.coco_to_project.ipynb  scr.labeler.py  scr.peakdiff.py  slurm.train.ddp.sh  slurm.train.res_bifpn.ddp.sh  slurm.train.res_bifpn.sh  submit.scan_bifpn_block.ddp.py  submit.scan_lr.ddp.py  submit.scan_lr.py  submit_fsdp_job.py  submit_job.py  task000.yaml  train.att_unet.from_cxi.py  train.att_unet.py  train.min_pf.py  train.py  train.res_bifpn_net.cxi.ddp.py  train.res_bifpn_net.ddp.py  train.res_bifpn_net.py  train.resize.py  train.unet.py
examples/demo/: demo.ipynb
examples/fsdp/: scr.custom_shard.py
examples/ipc/: client.ipc.py  client.ipc.segmented_dataset.py  request_and_reply.sbatch  (+1 more)
min_pf/: att_unet.py  utils.py
peaknet/: app.py  app_att_unet.py  app_om.py  app_refactor.py  app_res_bifpn.py  app_small.py  att_unet_small.py  config.py  configurator.py  criterion.py  lr_scheduler.py  peakfinder.py  perf.py  plugins.py  stream_parser.py  tensor_transforms.py  trans.py  utils.py  utils_fsdp.py
tests/: test_hiera_mae.py  test_hiera_model.py  test_hiera_segmentation.py
train/: launch_job.slurm.py  nsys_profile.sh  split_zarr_dataset.py  train.fsdp+sharded_checkpoint.py  train.fsdp.py
(+98 files in other folders)
